# package_door_opening

./: CMakeLists.txt  README.md  package.xml
examples/: monitor_relative_angular_distance.xml  script_temp_frame_center_of_circle.xml  script_temp_frame_from_taubin.xml  script_temp_frame_offset.xml  skill_door_opening.xml  skill_door_opening_task_board.xml  skill_pivot_taubin.xml
include/package_door_opening/monitors/: monitor_relative_angular_distance.hpp
include/package_door_opening/scripts/: script_temp_frame_center_of_circle.hpp  script_temp_frame_from_taubin.hpp  script_temp_frame_offset.hpp
include/pitasc_pivot_taubin/monitors/: monitor_relative_angular_distance.hpp
include/pitasc_pivot_taubin/scripts/: script_temp_frame_from_taubin.hpp
launch/: bringup_examples.launch  example_task_board.launch
monitors/: monitor_relative_angular_distance.xml
resources/urdf/: tesk_board_v2.urdf.xacro
scripts/: script_temp_frame_center_of_circle.xml  script_temp_frame_from_taubin.xml  script_temp_frame_offset.xml
skills/: skill_door_opening.xml  skill_pivot_taubin.xml
src/monitors/: monitor_relative_angular_distance.cpp
src/scripts/: script_temp_frame_center_of_circle.cpp  script_temp_frame_from_taubin.cpp  script_temp_frame_offset.cpp
